assets/css/style.css
/* ... */
.position-relative{
    position: relative;
}

h5{
    text-transform: uppercase;
    margin-top: 0.5rem;
    text-shadow: 2px 2px rgba(170, 170, 170,.7);
}

#about-us{
    position: absolute;
    top: 27rem;
}

#services{
    position: absolute;
    top: 65rem;
}

#why-choose-us{
    position: absolute;
    top: 134rem;
}

#contact{
    position: absolute;
    top: 166rem;
}

#about-us-collapse{
    position: absolute;
    top: 25rem;
}

#services-collapse{
    position: absolute;
    top: 81rem;
}

#why-choose-us-collapse{
    position: absolute;
    top: 207rem;
}

#contact-collapse{
    position: absolute;
    top: 255rem;
}

.fa{
    padding-right: 0.5rem;
}

/**       ** NAVBAR**       **/

.bg-navbar{
    background: url(../images/header.png);
    height: 4.4rem;
    z-index: 1;
}

.fixed{
    position: fixed;
}

/*NAVBAR BRAND**/

.fa-certificate{
    position: absolute;
    font-size: 3.8rem;
    top: 0.24rem;
    color: #0b4580;
    text-shadow: 2px 2px 2px #e0a354;
}

.fa-circle-p1{
    position: absolute;
    font-size: 2.2rem;
    padding-left: 0.65rem;
    top: 1rem;
    color: #4474a3;

}

.fa-circle-p2{
    position: absolute;
    font-size: 1.6rem;
    padding-left: 0.9rem;
    top: 1.4rem;
    color: #e09354;
}

h1{
    position: absolute;
    text-transform: uppercase;
    font-weight: 600;
    font-family: "Asul",sans-serif;
    font-size: 1.5rem;
    text-align: left;
    top: 0.4rem;
    word-spacing: 0.5rem;
    color: #d6d6d6;
    text-shadow: 2px 2px 2px #4b4b4b79;
}

.navbar-brand{
    white-space: normal;
    position: absolute;
    margin-left: 3.50rem;
}

/*NAVBAR LINKS*/

.navbar-links{
    margin-top: 1.35rem;
}

.navbar-links a{
    margin-right: 1.5rem;
    color: #fafafa;
    font-weight: 600;
    text-transform: uppercase;
    font-size: 0.9rem;
}

.navbar-links a:hover{
    text-decoration: none;
}

.hvr-underline-from-center:before{
    background: rgba(255, 255, 255, 0.5);
    height: 3px;
}

/*COLLAPSE NAVBAR*/
.fa-bars{
    padding: 0;
    color: #fafafa;
}

.col-md-1{
    text-align: right;
    z-index: 1;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary.focus, 
.btn-primary:focus, .btn-primary:focus, .btn-primary, .btn-primary:hover, 
.btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle{
    border: none;
    color: transparent;
    background-color:transparent;
    border-color: transparent;
    box-shadow: none;
    padding: 0 15px 0 15px;
    font-size: 2.8rem;
}

.collapse-nav-item a{
    text-decoration: none;
    color: #fafafa;
    text-transform: uppercase;
    font-weight: 500;
}

ul .collapse-nav-item{
    list-style: none;
    text-align: center;
    padding-bottom: 1rem;
}

ul .collapse-nav-item:first-child{
    padding-top: 1rem;
}

ul .collapse-nav-item:last-child{
    padding-bottom: 0.5rem;
}

#collapse-nav-bar{
    background: rgba(0, 0, 0, 0.5);
    margin-left: -15px;
    margin-right: -15px;
}

.collapse-link:hover{
    font-weight: 800;
}


/**       ** /NAVBAR**       **/


/**       **HEADER**       **/

.contact-header{
    top: 4.5rem;
    height: 3rem;
}

/**CONTACT DETAILS**/

.contact-mail-header{
    position: absolute;
    padding-top: 0.7rem;
    padding-left: 0;
    margin-left: 20%;
    font-size: 1rem;
}

.contact-number-mail{
    position: absolute;
    padding-top: 0.7rem;
    margin-left: 55%;
    font-size: 1rem;
}

.contact-number-mail h6, .contact-mail-header h6{
    display: inline;
    font-size: 1rem;
    color: #fafafa;
    font-family: "Open Sans", sans-serif;
}

.fa-phone-square, .fa-envelope, .fa-map-marker{
    color: #fafafa;
    padding-right: 0.5rem;
}

/**SOCIAL ICONS**/

.social-media-header{
    font-size: 1.5rem;
    padding-top: 0.4rem;
    padding-right: 0;
    margin-left: 80%;
    text-align: center;
}

.fa-linkedin-square, .fa-facebook-square{
    color: #fafafa;
    padding-right: 0;
}

.fa-linkedin-square:hover, .fa-facebook-square:hover{
    color: #d1d0d0;
}

/**LANGUAGE SELECTOR**/

.btn-light, .btn-light:hover, .btn-light:focus, .btn-light:not(:disabled):not(.disabled).active, 
.btn-light:not(:disabled):not(.disabled):active, .show>.btn-light.dropdown-toggle, 
.btn-light:not(:disabled):not(.disabled).active:focus, .btn-light:not(:disabled):not(.disabled):active:focus, 
.show>.btn-light.dropdown-toggle:focus {
    height: 3rem;
    padding: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    border-radius: 0;
    border: none;
    color: transparent;
    background-color:transparent;
    border-color: transparent;
    box-shadow: none;
}


.fa-globe{
    font-size: 1.5rem;
    color: #fafafa;
}

.fa-globe:hover{
    color: #d1d0d0;
}

.dropdown-toggle{
    font-size: 1rem;
}

.dropdown-menu{
    margin: 0;
    padding: 0;
}

.dropdown-item{
    margin: 0;
    padding: 0;
    font-family: "Open Sans", sans-serif;
    padding-left: 1rem;
}

.dropdown-item:hover{
    margin: 0;
    padding: 0;
    background: rgba(0, 0, 0, 0.2);
    font-weight: 600;
    padding-left: 1.5rem;
}

.dropdown-item.active, .dropdown-item:active{
    color: white;
    background: grey;
    font-weight: 600;
}


.block-divider-header{
    margin:0;
    border-top: 3px solid rgba(255, 255, 255, 0.1);
}

/**HERO IMAGE**/

#hero-image{
    height: 30rem;
    background: url(../images/successful-team-group.png) no-repeat bottom center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    z-index: -1;
}


.opaque-overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: -1;
  }
/* ... */

